--- a/software/QuadrocopterGUI/errordialog.ui
+++ b/software/QuadrocopterGUI/errordialog.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>200</width>
+    <height>150</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>200</width>
+    <height>150</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>220</width>
+    <height>150</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
