--- a/software/QuadrocopterGUI/mainwindow.ui
+++ b/software/QuadrocopterGUI/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Multicopter GUI</string>
+   <string>MAVs GUI</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout_2">
